{
    "name": "DefaultAction",
    "maps": [
        {
            "name": "Rocket",
            "id": "68b7ddc8-4f67-4e41-b55c-ba09a1a1202c",
            "actions": [
                {
                    "name": "ForceUp",
                    "type": "PassThrough",
                    "id": "d5649918-3be8-48c9-b4f1-3cd0d619ddc4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftRight",
                    "type": "PassThrough",
                    "id": "9401f580-fec1-454d-a1cd-de844f971aa9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d3bbe319-9acb-4253-8f7f-74bd6c289277",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "f29eb0ea-3ee5-4c9c-9711-5ecb85d7ef6f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7c1adaed-6b73-42ed-8760-77ca1249f5c2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2c320569-2e3c-49c0-a64a-2a7f35478832",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}